# BVM

./: .gitignore  CMakeLists.txt  README.md
bytecodes/: buffer_test.bs  for_speed_test.bs  recursive_sum.bs  test.be  test.bs
bytecodes/src/: input.bs  test_source.bs
docs/: BCC_README.md  BVM_README.md  DOCS_README.md  TODO.txt
include/: assertion.hpp  bcc.hpp  bvm.hpp  opcodes.hpp  std.hpp  types.hpp
include/bcc/: codes_tables.hpp  compiler.hpp  function_compilation.hpp  functions.hpp
include/bvm/: function_scope.hpp  function_stack.hpp  instruction_table.hpp  instructions.hpp  interpreter.hpp  machine.hpp  operation_stack.hpp  stack.hpp
include/bvm/machine/: engine.hpp  functions.hpp
src/: bcc.cpp  bvm.cpp  main.cpp  std.cpp
src/bcc/: compiler.cpp  function_compilation.cpp
src/bcc/function_compilaton/: arithmetics.cpp  bitwise.cpp  casts.cpp  comparison.cpp  funcs.cpp  function_call_and_return.cpp  jump.cpp  load.cpp  mem.cpp  memory_access.cpp  memory_managment.cpp  pop.cpp  push.cpp  stack.cpp  stack_manipulation.cpp  store.cpp
src/bvm/: function_scope.cpp  function_stack.cpp  interpreter.cpp  machine.cpp  operation_stack.cpp  stack.cpp
src/bvm/instructions/: arithmetics.cpp  bitwise.cpp  call_and_ret.cpp  casts.cpp  comparison.cpp  funcs.cpp  jumps.cpp  load.cpp  mem.cpp  memory_managment.cpp  pop.cpp  push.cpp  stack_manipulation.cpp  store.cpp
src/bvm/machine/: engine.cpp  functions.cpp
src/bvm/operation_stack/: arithmetics.cpp  bitwise.cpp  comparison.cpp  load.cpp  mainpulation.cpp  memory.cpp  store.cpp
